Details
-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.5.0
-
None
-
-
483f257e8 (dev), 64a906a8f (6.5)
Description
Steps to reproduce:
- Place QLabel on form
- Change text alignment to HRIght
- Observe: No effect
(also does not save/load)
Attachments
Issue Links
- is duplicated by
-
PYSIDE-2345 PySide6_designer
-
- Closed
-
-
QTBUG-113388 Cannot change Enum values in Qt Designer
-
- Closed
-
-
QTBUG-113441 Qt Designer does not set Text alignment on QLabel
-
- Closed
-
-
QTCREATORBUG-29152 QLabel alignment is incorrect
-
- Closed
-