Qt Designer: Fix editing horizontal alignment properties

Fix slot connection, amending
f6c9325f639d882992bb3c6386185defd2090498.

Fixes: QTBUG-112682
Change-Id: Idb325f31ed8f454433f4b8d28183a571877972ff
Reviewed-by: Jarek Kobus <jaroslaw.kobus@qt.io>
(cherry picked from commit 483f257e887a590d3462d0fc60b7eebfa50a3d19)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>